test/libyul/yulSyntaxTests/dot_trailing_variabledeclaration.yul
{
    let a. := 1
}
// ----
// SyntaxError 3384: (10-12): "a." is not a valid identifier (ends with a dot).
